2024-02-06T16:18:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7802762175 # 92
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-06
* notice: last 14d: unq all: 4 4152
* notice: prev accum: outdated-unq outdated-all / unq all: 1910 185222 / 1943 189543
* notice: next accum: outdated-unq outdated-all / unq all: 1910 185222 / 1943 189635
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -1 -93 / +2 +204 -0 -0 / 2 204
* notice: removed / changed dates: [] / [2024-01-23 2024-02-06]

2024-02-06T08:18:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7796627538 # 91
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-06
* notice: last 14d: unq all: 4 4153
* notice: prev accum: outdated-unq outdated-all / unq all: 1910 185222 / 1941 189431
* notice: next accum: outdated-unq outdated-all / unq all: 1910 185222 / 1943 189543
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -91 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2024-01-23 2024-02-06]

2024-02-06T01:04:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7793108680 # 90
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-06
* notice: last 14d: unq all: 4 4132
* notice: prev accum: outdated-unq outdated-all / unq all: 1908 184922 / 1941 189335
* notice: next accum: outdated-unq outdated-all / unq all: 1910 185222 / 1941 189431
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -1 -77 / +2 +300 -0 -0 / 2 300
* notice: removed / changed dates: [2024-01-22] / [2024-01-23 2024-02-05]

2024-02-05T16:17:47Z: