@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-25T01:11:22Z",
-  "count" : 300,
+  "timestamp" : "2024-02-07T01:02:47Z",
+  "count" : 225,
   "count_minmax" : [ 111, 300 ],
-  "count_decinc" : [ -0, +300 ],
+  "count_decinc" : [ -75, +300 ],
   "uniques" : 3,
   "uniques_minmax" : [ 1, 3 ],
   "uniques_decinc" : [ -0, +3 ]
