@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-02-06T16:18:16Z",
-  "count_outdated" : 185222,
-  "uniques_outdated" : 1910,
-  "count" : 189635,
+  "timestamp" : "2024-02-07T01:02:47Z",
+  "count_outdated" : 185523,
+  "uniques_outdated" : 1913,
+  "count" : 189731,
   "uniques" : 1943,
   "clones" : [
     {
-      "timestamp": "2024-01-23T00:00:00Z",
-      "count": 40,
-      "count_minmax": [ 40, 301 ],
-      "count_decinc": [ 261, 301 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 2, 3 ]
-    },
-    {
       "timestamp": "2024-01-24T00:00:00Z",
-      "count": 300,
+      "count": 225,
       "count_minmax": [ 111, 300 ],
-      "count_decinc": [ 0, 300 ],
+      "count_decinc": [ 75, 300 ],
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-06T00:00:00Z",
-      "count": 204,
-      "count_minmax": [ 112, 204 ],
-      "count_decinc": [ 0, 204 ],
+      "count": 300,
+      "count_minmax": [ 112, 300 ],
+      "count_decinc": [ 0, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
