@@ -1,15 +1,10 @@
 {
-  "count": 4152,
+  "count": 4133,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2024-01-23T00:00:00Z",
-      "count": 40,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-01-24T00:00:00Z",
-      "count": 300,
+      "count": 225,
       "uniques": 3
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2024-02-06T00:00:00Z",
-      "count": 204,
+      "count": 300,
       "uniques": 2
     }
   ]
